tests/negative/test_custom_cast_impl_into.orb
eval (sym (t:(type cn)::custom i32));

fnc main () () {
    sym (a:t 0:i32);
};